--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
@@ -14,7 +20,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-bottom: 0.67em;
+  margin: 2em 0;
 }
 
 .title {
@@ -25,8 +31,12 @@ body {
 }
 
 .img-home {
-  width: 400px;
-  padding: 50px;
+  width: 500px;
+}
+
+.container-buttons {
+  display: flex;
+  gap: 20px;
 }
 
 .btn-search {
@@ -34,18 +44,54 @@ body {
   color: #ffffff;
   box-shadow: 0 4px 12px rgb(27 169 76 / 50%);
   font-size: 18.005px;
-  padding: 0 1.528em;
+  padding: 10px 20px;
   min-height: 2.778em;
   border: none;
   border-radius: 8em;
   cursor: pointer;
-  transition: all .3s;
+  transition: all 0.3s;
+  margin-top: 15px;
 }
 
 .btn-search:hover {
   background-color: #ffffff;
   border: 1px solid #1ba94c;
   color: #1ba94c;
+}
+
+.link {
+  color: #fff;
+  text-decoration: none;
+  background-color: #1ba94c;
+  box-shadow: 0 4px 12px rgb(27 169 76 / 50%);
+  font-size: 18.005px;
+  padding: 10px 20px;
+  min-height: 2.778em;
+  border: none;
+  border-radius: 8em;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-top: 15px;
+
+  &:hover {
+    background-color: #ffffff;
+
+    color: #1ba94c;
+  }
+}
+
+.link-characters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline: 20px;
+}
+
+.no-characters {
+  color: #fff;
+  font-size: 24px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .characters {
@@ -58,9 +104,20 @@ body {
 
 .container-characters {
   display: grid;
-  grid-template-columns: auto auto auto;
-  width: 100%;
-  padding-bottom: 50px;
+  grid-template-columns: 1fr;
+  margin-inline: 10px;
+
+  @media (width >= 768px) {
+    & {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media (width >= 1200px) {
+    & {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
 }
 
 .character-container {
@@ -68,24 +125,23 @@ body {
   background: #3c3e44;
   margin: 20px 10px;
   border-radius: 10px;
-  align-items: flex-start;
+  color: #ede;
 }
 
-.character-container h3 {
-  margin: 10px 0;
-}
-
-.character-container h6 {
-  margin-top: 0px;
-  margin-bottom: 15px;
+.character-info {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 16px;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.character-name {
+  margin: 10px 0;
+  font-size: 24px;
 }
 
 .character-container .dead,
-.alive {
+.alive,
+.unknown {
   height: 0.5rem;
   width: 0.5rem;
   margin-right: 0.375rem;
@@ -101,6 +157,10 @@ body {
   background: rgb(85, 204, 68);
 }
 
+.character-container .unknown {
+  background: rgb(158, 158, 158);
+}
+
 .character-container div:first-child {
   height: 100%;
 }
@@ -114,8 +174,8 @@ body {
 }
 
 .character-container img {
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px 0 0 10px;
 }
@@ -126,23 +186,9 @@ body {
   margin: 5px 0;
 }
 
-.text-grey {
-  color: #9e9e9e;
-}
-
-.back-home {
-  text-decoration: underline;
-  cursor: pointer;
-  font-size: 15px;
-}
-
 @media (max-width: 768px) {
   .characters {
     padding: 0 20px;
-  }
-
-  .container-characters {
-    display: table-cell;
   }
 
   .character-container {
