--- a/src/index.css
+++ b/src/index.css
@@ -39,58 +39,42 @@ body {
   gap: 20px;
 }
 
-.btn-search {
+.btn-search, .link {
   background-color: #1ba94c;
-  color: #ffffff;
-  box-shadow: 0 4px 12px rgb(27 169 76 / 50%);
-  font-size: 18.005px;
+  color: #ede;
+  margin-block: 10%;
   padding: 10px 20px;
-  min-height: 2.778em;
-  border: none;
-  border-radius: 8em;
+  border-radius: 50px;
   cursor: pointer;
-  transition: all 0.3s;
-  margin-top: 15px;
+  font-size: 17px;
+  border: none;
+  transition: all .3s;
+
+  &:hover {
+    background-color: #fff;
+    color: #1ba94c;
+  }
 }
 
-.btn-search:hover {
-  background-color: #ffffff;
+.btn-search {
   border: 1px solid #1ba94c;
-  color: #1ba94c;
 }
 
 .link {
-  color: #fff;
   text-decoration: none;
-  background-color: #1ba94c;
-  box-shadow: 0 4px 12px rgb(27 169 76 / 50%);
-  font-size: 18.005px;
-  padding: 10px 20px;
-  min-height: 2.778em;
-  border: none;
-  border-radius: 8em;
-  cursor: pointer;
-  transition: all 0.3s;
-  margin-top: 15px;
-
-  &:hover {
-    background-color: #ffffff;
-
-    color: #1ba94c;
-  }
 }
 
 .link-characters {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-inline: 20px;
+  margin: 20px 20px 0;
 }
 
 .no-characters {
   color: #fff;
   font-size: 24px;
-  margin-top: 20px;
+  margin: 20px 20px 0;
   text-align: center;
 }
 
